fixed mode in dark mode to be less button like and added setTime function

--- a/source/components/pomo-timer.css
+++ b/source/components/pomo-timer.css
@@ -4,31 +4,18 @@
     justify-content: space-between;
     align-items: center;
 }
-/*
-.mode {
-    color: #F1F6FB;
-    background-color: #63A259;
-    font-family: 'Work Sans', sans-serif;
-    font-weight: 600;
-    font-size: 18px;
-    margin-bottom: 30px; 
-    padding: 5px 25px;
-    border-radius: 6px;
-    border: 1.5px solid;
-    border-color: #67D25A;
-}*/
 
 .mode {
-    color: #8D949D;
-    background-color: #151D2D;
-    font-family: 'Work Sans', sans-serif;
-    font-weight: 600;
+    color: #79D071;
+    background-color: #18221D;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 700;
     font-size: 18px;
     margin-bottom: 30px; 
     padding: 5px 25px;
-    border-radius: 6px;
+    border-radius: 2em;
     border: 1.5px solid;
-    border-color: #28416F;
+    border-color: #355E36;
 }
 
 .time {
@@ -41,47 +28,28 @@
     border-radius: 6px;
     border-color: #31363C;
 }
-/*
+
 button {
-    color: #8D949D;
+    color: #CBD1D8;
+    /*color: #8D949D;*/
     background-color: #22262C;
     font-weight: 600;
-    font-size: 15px;
+    font-size: 16px;
     border: 1.5px solid;
-    padding: 5px 20px;
+    padding: 7px 25px;
     border-radius: 6px;
     border-color: #31363C;
-    width: 80px;
+    width: 95px;
     cursor: pointer;
-}*/
+}
 
-button {
+button:hover {
     color: #F1F6FB;
-    background-color: #28416F;
-    font-weight: 600;
-    font-size: 15px;
-    border: 1.5px solid;
-    padding: 5px 20px;
-    border-radius: 6px;
-    border-color: #2962C0;
-    width: 80px;
-    cursor: pointer;
-}
-
-button:hover {
-    color: #CBD1D8;
-    background-color: #2962C0;
-    border-color: #AABBDC;
-    transition-duration: .1s;
-}
-
-/*
-button:hover {
-    color: #CBD1D8;
+    /*color: #CBD1D8;*/
     background-color: #31363C;
     border-color: #8D949D;
     transition-duration: .1s;
-}*/
+}
 
 .space {
     background-color: #0E1116;
